# ciphershotroulett

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/skills/orchestation/: SKILL.md
.devcontainer/: devcontainer.json
docs/: SOUND_DESIGN.md  ZAMA_FHE_INTEGRATION.md
programs/ciphershot/: Cargo.toml
programs/ciphershot/src/: errors.rs  lib.rs  state.rs
programs/ciphershot/src/instructions/: choose_target.rs  create_match.rs  delegate_match.rs  mod.rs  play_card.rs  undelegate_match.rs
server/: index.ts  matchStore.ts  matchmaking.ts  solanaListener.ts  tsconfig.json
src/: App.tsx  main.tsx
src/components/: ActionPanel.tsx  CardDisplay.tsx  CardSelectOverlay.tsx  GameScreen.tsx  HUD.tsx  MatchmakingLobby.tsx  ResultBanner.tsx  ShotHistory.tsx  SuspenseOverlay.tsx  TargetingOverlay.tsx  Tutorial.tsx  WalletConnect.tsx
src/game/: store.ts
src/game/adapters/: GameEngineAdapter.ts  LocalGameEngineAdapter.ts
src/game/core/: cards.ts  chamber.ts  engine.ts  index.ts  resolver.ts  types.ts
src/game/phaser/: GameScene.ts  config.ts  index.ts
src/lib/: audio.ts  matchmaking.ts  per.ts  solana.ts  wallet.ts
src/styles/: crt.css
