[package]
name = "ciphershot"
version = "0.1.0"
description = "CipherShot - Encrypted Russian Roulette duel on Solana with MagicBlock PER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ciphershot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.6", features = ["anchor"] }
